Email updated with UCSD account; CV updated

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,9 @@
 # Authors
 
 Name Name:
-  name        : "Leonardo Pacciani Mori"
-  uri         : "https://leonardopaccianimori.com"
-  email       : "leonardo.pacciani@phd.infn.it"
+  name        : "Leonardo Pacciani-Mori"
+  uri         : "https://leonardo.pm"
+  email       : "lpaccianimori@physics.ucsd.edu"
   bio         : ""
   avatar      : "profile.png"
   twitter     : "LeoPaccianiMori"
