--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.it/citations?user=jRBIQbEAAAAJ"
-  email            : "leonardo.paccianimori@phd.unipd.it"
+  email            : "lpaccianimori@physics.ucsd.edu"
   uri              :
   bitbucket        :
   codepen          :
