--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Postdoctoral researcher at University of California, San Diego<br><br>
                      <img src='/images/UCSD_logo.png' alt='University of California, San Diego'><br>"
-  location         : "San Diego (CA)"
+  location         : "La Jolla, San Diego (CA)"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.it/citations?user=jRBIQbEAAAAJ"
