Inserted map and network in talks and publications page (hidden standalone pages)

--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   wikipedia        :
   researchgate     : #"Leonardo_Pacciani-Mori"
   academia         :
-  mendeley         : #"leonardo-pacciani-mori"
+  mendeley         :
 
 
 # Reading Files
