--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :  G-GQNCJ953Q8      #old: UA-123342001-1
+    tracking_id          :  UA-123342001-1      #old: UA-123342001-1
 
 
 # Site Author
