--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Leonardo Pacciani-Mori"
 title_separator          : " &#124; "
 name                     : &name "Leonardo Pacciani-Mori"
-description              : &description "PhD student in Physics at University of Padua"
+description              : &description "Postdoctoral researcher at University of California, San Diego"
 url                      : https://leonardo.pm # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "LeonardoPaccianiMori/personal-website"
